--- a/core/pom.xml
+++ b/core/pom.xml
@@ -2,12 +2,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.cjdev.scmconduit</groupId>
+		<groupId>com.cj.scmconduit</groupId>
 		<artifactId>scm-conduit-pom</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	
-	<groupId>org.cjdev.scmconduit.core</groupId>
+	<groupId>com.cj.scmconduit.core</groupId>
 	<artifactId>scm-conduit-core</artifactId>
 	
 	<name>${project.artifactId}</name>	
@@ -31,7 +31,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>org.cjdev.scmconduit.core.ScmConduit</mainClass>
+                            <mainClass>com.cj.scmconduit.core.ScmConduit</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
