--- a/pom.xml
+++ b/pom.xml
@@ -25,5 +25,18 @@
 	<modules>
 		<module>server</module>
 		<module>core</module>
+        <module>git</module>
+        <module>bzr</module>
+        <module>p4</module>
+        <module>util</module>
 	</modules>
+	
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.8.1</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 </project>
