--- a/server/pom.xml
+++ b/server/pom.xml
@@ -61,6 +61,11 @@
 	</build>
 	
 	<dependencies>
+	    <dependency>
+			<groupId>org.httpobjects.jetty</groupId>
+			<artifactId>httpobjects-jetty</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+	    </dependency>
 		<dependency>
 	      <groupId>commons-logging</groupId>
 	      <artifactId>commons-logging</artifactId>
