Added a link to the conduit log, misc. clean-up

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -12,6 +12,8 @@
 	
 	<name>${project.artifactId}</name>	
 	<build>
+		<sourceDirectory>${basedir}/src/main/scala</sourceDirectory>
+		<testSourceDirectory>${basedir}/src/test/scala</testSourceDirectory>
 		<plugins>
             <plugin>
                 <groupId>org.scala-tools</groupId>
