--- a/server/pom.xml
+++ b/server/pom.xml
@@ -147,7 +147,7 @@
 		<dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
-            <version>2.9.1</version>
+            <version>${scala-version}</version>
         </dependency>
 	</dependencies>
 </project>
