--- a/server/pom.xml
+++ b/server/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.cj.scmconduit</groupId>
 		<artifactId>scm-conduit-pom</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>0.2.0-SNAPSHOT</version>
 	</parent>
 
 	<groupId>com.cj.scmconduit.server</groupId>
@@ -121,13 +121,13 @@
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-simple</artifactId>
+			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.5.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.sshd</groupId>
 			<artifactId>sshd-core</artifactId>
-			<version>0.5.0</version>
+			<version>0.8.0</version>
 		</dependency>
 		<dependency>
 			<groupId>bouncycastle</groupId>
@@ -149,5 +149,6 @@
             <artifactId>scala-library</artifactId>
             <version>${scala-version}</version>
         </dependency>
+        
 	</dependencies>
 </project>
