--- a/core/pom.xml
+++ b/core/pom.xml
@@ -106,9 +106,9 @@
 			<version>4.8.1</version>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.commons</groupId>
+			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>1.3.2</version>
+			<version>2.4</version>
 		</dependency>
 		<dependency>
             <groupId>org.scala-lang</groupId>
