--- a/server/pom.xml
+++ b/server/pom.xml
@@ -149,6 +149,12 @@
             <artifactId>scala-library</artifactId>
             <version>${scala-version}</version>
         </dependency>
-        
-	</dependencies>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.5</version>
+            <scope>test</scope>
+        </dependency>
+
+    </dependencies>
 </project>
