--- a/pump/pom.xml
+++ b/pump/pom.xml
@@ -115,5 +115,10 @@
             <artifactId>scala-library</artifactId>
             <version>${scala-version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.scala-lang.modules</groupId>
+            <artifactId>scala-xml_2.11</artifactId>
+            <version>1.0.2</version>
+        </dependency>
 	</dependencies>
 </project>
